<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LTE-Band</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="device_status_activity_title">Status </string>
	<string name="lte_status_title">3G/4G capability</string>
	<string name="lte_info_not_available">not regs lte band</string>
	<string name="lte_band_title">LTE BAND</string>
	<string name="lte_band_not_available">LTE band null</string>
	<string name="sim_status_title">SIM Status</string>
    <string name="status_serial_number">Serial number</string>
    <string name="device_info_not_available">Not available</string>
        <string name="status_icc_id">ICCID</string>
    <string name="status_network_type">Cellular network type</string>
    <string name="status_latest_area_info">Operator info</string>
    <string name="status_data_state">Cellular network state</string>
    <string name="status_service_state">Service state</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="status_roaming">Roaming</string>
    <string name="status_operator">Network</string>
    <string name="status_number" product="default">My phone number</string>
    <string name="status_imei">IMEI</string>
    <string name="status_imei_sv">IMEI SV</string>
    <string name="device_info_default">Unknown</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="sim_signal_strength"><xliff:g id="dbm">%1$d</xliff:g> dBm <xliff:g id="asu">%2$d</xliff:g> asu</string>
    <string name="radio_info_signal_location_label">Location:</string>
    <string name="radio_info_neighboring_location_label">Neighboring CID:</string>
    <string name="radio_info_cellinfo_label">CellInfo:</string>
    <string name="radio_info_dcrtinfo_label">DcRtInfo:</string>
    <string name="radio_info_data_attempts_label">Data attempts:</string>
    <string name="radio_info_gprs_service_label">GPRS service:</string>
    <string name="radio_info_roaming_label">Roaming:</string>
    <string name="radio_info_imei_label">IMEI:</string>
    <string name="radio_info_call_redirect_label">Call redirect:</string>
    <string name="radio_info_ppp_resets_label">Number of PPP reset since boot:</string>
    <string name="radio_info_gsm_disconnects_label">GSM disconnects:</string>
    <string name="radio_info_current_network_label">Current network:</string>
    <string name="radio_info_data_successes_label">Data successes:</string>
    <string name="radio_info_ppp_received_label">PPP received:</string>
    <string name="radio_info_gsm_service_label">GSM service:</string>
    <string name="radio_info_signal_strength_label">Signal strength:</string>
    <string name="radio_info_call_status_label">Call status:</string>
    <string name="radio_info_ppp_sent_label">PPP sent:</string>
    <string name="radio_info_radio_resets_label">Radio resets:</string>
    <string name="radio_info_message_waiting_label">Message waiting:</string>
    <string name="radio_info_phone_number_label">Phone number:</string>
    <string name="radio_info_band_mode_label">Select radio band</string>
    <string name="radio_info_network_type_label">Network type:</string>
    <string name="radio_info_set_perferred_label">Set preferred network type:</string>
    <string name="radio_info_ping_ipaddr">Ping IpAddr:</string>
    <string name="radio_info_ping_hostname">Ping Hostname(www.google.com):</string>
    <string name="radio_info_http_client_test">HTTP Client test:</string>
    <string name="ping_test_label">Run ping test</string>
    <string name="radio_info_smsc_label">SMSC:</string>
    <string name="radio_info_smsc_update_label">Update</string>
    <string name="radio_info_smsc_refresh_label">Refresh</string>
    <string name="radio_info_toggle_dns_check_label">Toggle DNS check</string>
    <string name="oem_radio_info_label">OEM-specific Info/Settings</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="volte_provisioned_flag_on">Turn on VoLTE provisioned flag</string>
    <string name="volte_provisioned_flag_off">Turn off VoLTE provisioned flag</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
        <string name="start_service">start services</string>
    <string name="cell_info_title">LAC|CID</string>
    <string name="not_set">not set</string>
    <string name="radio_sim_1">SIM1</string>
    <string name="radio_sim_2">SIM2</string>
    <string name="band_support_sim1_title">SIM1 support band</string>
    <string name="band_support_sim2_title">SIM2 support band</string>
    <string name="BandSel_GSM">GSM Mode</string>
    <string name="BandSel_GSM_EGSM900">EGSM900</string>
    <string name="BandSel_GSM_DCS1800">DCS1800</string>
    <string name="BandSel_GSM_PCS1900">PCS1900</string>
    <string name="BandSel_GSM_GSM850">GSM850</string>
    <string name="BandSel_UMTS">UMTS Mode</string>
    <string name="TDD_UMTS_BAND_I">TD_SCDMA Band A</string>
    <string name="TDD_UMTS_BAND_II">TD_SCDMA Band B</string>
    <string name="TDD_UMTS_BAND_III">TD_SCDMA Band C</string>
    <string name="TDD_UMTS_BAND_IV">TD_SCDMA Band D</string>
    <string name="TDD_UMTS_BAND_V">TD_SCDMA Band E</string>
    <string name="TDD_UMTS_BAND_VI">TD_SCDMA Band F</string>
    <string name="BandSel_UMTS_BAND_I">WCDMA-IMT-2000</string>
    <string name="BandSel_UMTS_BAND_II">WCDMA-PCS-1900</string>
    <string name="BandSel_UMTS_BAND_III">WCDMA-DCS-1800</string>
    <string name="BandSel_UMTS_BAND_IV">WCDMA-AWS-1700</string>
    <string name="BandSel_UMTS_BAND_V">WCDMA-CLR-850</string>
    <string name="BandSel_UMTS_BAND_VI">WCDMA-800</string>
    <string name="BandSel_UMTS_BAND_VII">WCDMA-IMT-E-2600</string>
    <string name="BandSel_UMTS_BAND_VIII">WCDMA-GSM-900</string>
    <string name="BandSel_UMTS_BAND_IX">WCDMA-1800</string>
    <string name="BandSel_UMTS_BAND_X">WCDMA-1700</string>
    <string name="band_title">Signal State</string>
    <string name="operator_failed">Operation failed</string>
    <string name="todos_empty_info">No item</string>
    <string name="sim_signal_state_title">Signal State</string>
</resources>